app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-any-type/src/patmat.cal
namespace patmat:
    actor ExhaustivityAny() ==> int OUT:
        int n;
        do
            OUT <--
                case n of
                    (1 + 2) : 1 end
                end;
        end
    end
end
